@@ -559,6 +559,7 @@
 31) Tar autodetect compressed tarballs enabled per default.<br>
 32) WebUi spelling/spacing fixes.<br>
 33) Add samba v3.3.16. Use CONFIG_USER_SAMBA3 in config-config*.<br>
+34) Add /etc/wan_up.sh in internet.sh hook for exec user scripst at physycal connection configured.<br>
 
 <br><br>
 <b>For support see:</b><br>
